# wordpress_chat

./: .env.example  AGENTS.md  Dockerfile  Makefile  README.md  architecture.md  chainlit.md  demo.md  docker-compose.yml  pyproject.toml
.chainlit/: config.toml
envs/: local.env
src/wordpress_chatbot/: __init__.py  chat.py  main.py  settings.py
src/wordpress_chatbot/ai/: agent.py  agents.py  context.py  middlewares.py  pii.py  prompts.py  retrievers.py  state.py  stt.py  tool_status.py  tools.py  utils.py
src/wordpress_chatbot/ai/memory/: __init__.py  crud.py  models.py  payload.py  summary.py
src/wordpress_chatbot/ai/prompts_data/: dialog_summary_refresh_system.md  dialog_summary_refresh_user.md  memory_context.md  memory_suggested_fields.json  services.md  services_prompt.md  services_urls.json  system_prompt.md  topic_guard_prompt.md
src/wordpress_chatbot/core/: chainlit_utls.py  constants.py  copilot.py  markdown.py  service_catalog.py  services.py
src/wordpress_chatbot/graph/: __init__.py  agent.py  middlewares.py
src/wordpress_chatbot/mcp/: __init__.py  server.py
src/wordpress_chatbot/providers/: __init__.py  wordpress_mock.py
tests/: __init__.py  test_providers.py
