[project]
name = "wordpress-chatbot"
version = "0.0.1"
description = "Chatbot for Wordpress deployment."
authors = []
readme = "README.md"
keywords = ['python']
requires-python = ">=3.12,<3.14"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aioboto3>=15.5.0",
    "asyncpg>=0.31.0",
    "chainlit>=2.11.1",
    "fastapi[standard]>=0.136.1",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "langchain-community>=0.4.1",
    "cachier>=4.2.0",
    "langchain>=1.3.10",
    "langchain-google-genai>=4.2.5",
    "langchain-openai>=1.3.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pre-commit>=4.5.1",
    "tox-uv>=1.33.4",
    "ty>=0.0.24",
    "ruff>=0.15.7",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=1.3.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wordpress_chatbot"]


[tool.ty.environment]
python = "./.venv"
python-version = "3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not ai'"
markers = [
    "ai: tests that require AI/LLM configuration",
]

[tool.ruff]
target-version = "py313"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
    "PLC0415", # forbid lazy imports"
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # try-consider-else
    "TRY300",
    # Avoid specifying long messages outside the exception class
    "TRY003",
    # Use ternary operator
    "SIM108",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true
