[project]
name = "wordpress-chatbot"
version = "0.1.0"
description = "AI-powered WordPress Insights Chat platform with MCP, LangGraph, and Chainlit"
authors = []
readme = "README.md"
keywords = ['python', 'wordpress', 'mcp', 'langgraph', 'chatbot']
requires-python = ">=3.12,<3.14"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "chainlit>=2.11.1",
    "fastapi[standard]>=0.136.1",
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.0.0",
    "mcp>=1.0.0",
    "langgraph>=1.0.0",
    "langchain>=1.3.10",
    "langchain-openai>=0.3.0",
    "httpx>=0.28.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=7.1.0",
    "pre-commit>=4.5.1",
    "ty>=0.0.24",
    "ruff>=0.15.7",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wordpress_chatbot"]


[tool.ty.environment]
python = "./.venv"
python-version = "3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not ai'"
asyncio_mode = "auto"
markers = [
    "ai: tests that require AI/LLM configuration",
]

[tool.ruff]
target-version = "py313"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "YTT",
    "S",
    "B",
    "A",
    "C4",
    "T10",
    "SIM",
    "I",
    "C90",
    "E", "W",
    "F",
    "PGH",
    "UP",
    "RUF",
    "TRY",
    "PLC0415",
]
ignore = [
    "E501",
    "E731",
    "TRY300",
    "TRY003",
    "SIM108",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true
